azure/backend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-canary
  namespace: studentsphere
  labels:
    app: backend
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      track: canary
  template:
    metadata:
      labels:
        app: backend
        track: canary
    spec:
      containers:
        - name: backend
          image: manesaurabh1704devops/studentsphere-backend:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
