azure/backend-blue-green.yaml
# Blue Deployment (Current/Stable)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: studentsphere
  labels:
    app: backend
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: blue
  template:
    metadata:
      labels:
        app: backend
        version: blue
    spec:
      containers:
        - name: backend
          image: manesaurabh1704devops/studentsphere-backend:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
# Green Deployment (New Version)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: studentsphere
  labels:
    app: backend
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: green
  template:
    metadata:
      labels:
        app: backend
        version: green
    spec:
      containers:
        - name: backend
          image: manesaurabh1704devops/studentsphere-backend:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
# Service — Blue ko point kar raha hai
apiVersion: v1
kind: Service
metadata:
  name: backend-bg-service
  namespace: studentsphere
spec:
  selector:
    app: backend
    version: blue
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
