azure/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: studentsphere
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
